Issue #14596: The struct.Struct() objects now use more compact implementation.